--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
  <title>Amazon</title>
     <!-- YS Latest compiled and minified CSS. We need to link our CSS to bootstrap. -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 
 
 </head>
@@ -29,9 +30,10 @@
              <li role="presentation"><a href="authors">Authors</a></li>
            </ul>
          </div>
-         </div>
+       </nav></div>
      </div>
   </div>
+
 <!-- The section bellow is actually our slider. But it's called carousel.  -->
 <%= yield %>
 
